Add pi and pi-zero bundle presets selectable by name
The bundles collect all Raspberry Pi hardware groups plus native access
and restart-on-OOM flags; pi-zero adds serial GC, a larger heap share and
C1-only JIT for 512 MB class boards. Presets can now be picked by alias
as well as by number.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>